[gd_scene load_steps=5 format=3 uid="uid://ovb8pxx3o1jy"]

[ext_resource type="Script" uid="uid://b11o4h38eaieo" path="res://scripts/npc.gd" id="1_abqhh"]
[ext_resource type="Texture2D" uid="uid://c8n77g0d0gsm4" path="res://assets/trash_monster.png" id="2_rv78h"]
[ext_resource type="Texture2D" uid="uid://d1volvmou6dee" path="res://assets/buttons/E_Key_Dark.png" id="3_rv78h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nh2m4"]
size = Vector2(56.5, 140)

[node name="NPC" type="Node2D"]
script = ExtResource("1_abqhh")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.20000221, 0.20000221)
texture = ExtResource("2_rv78h")

[node name="InteractZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractZone"]
position = Vector2(-77.25, -4)
shape = SubResource("RectangleShape2D_nh2m4")

[node name="ButtonPrompt" type="Sprite2D" parent="."]
visible = false
position = Vector2(-29, -49.999992)
scale = Vector2(0.585, 0.585)
texture = ExtResource("3_rv78h")

[connection signal="body_entered" from="InteractZone" to="." method="_player_enters_npc_interact_zone"]
[connection signal="body_exited" from="InteractZone" to="." method="_player_exits_npc_interact_zone"]
